[package]
name = "tlv-rs"
version = "0.1.1"
edition = "2021"
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
description = "A parser for SIMPLE TLVs."
readme = "README.md"
repository = "https://github.com/Frostie314159/tlv-rs"

[dependencies]
bin-utils = "0.1.0"

[features]
read = []
write = []
debug = []
default = ["read", "write", "debug"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "tlv_rs"
harness = false
