[package]
name = "tlv-rs"
version = "0.2.2"
edition = "2021"
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
description = "A parser for SIMPLE TLVs."
readme = "README.md"
repository = "https://github.com/Frostie314159/tlv-rs"

[dependencies]
heapless = "0.7.16"
no-panic = "0.1.26"
scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "no-unsafe", version = "0.11.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cfg-if = "1.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
macro-bits = "0.1.4"

[features]
alloc = []
no_panic = []

[[bench]]
name = "tlv_rs"
harness = false
